--- a/src/AsyncAPI.Saunter.Generator.Build/AsyncAPI.Saunter.Generator.Build.csproj
+++ b/src/AsyncAPI.Saunter.Generator.Build/AsyncAPI.Saunter.Generator.Build.csproj
@@ -53,8 +53,8 @@
     <None Include="readme.md" Pack="true" PackagePath="/" />
     <None Include="../../assets/logo.png" Pack="true" PackagePath="/" />
     <None Include="build/*" Pack="true" PackagePath="/build" />
-    <None Include="$(OutputPath)/net6.0/*" Pack="true" PackagePath="/tools/net6.0" />
-    <None Include="$(OutputPath)/net8.0/*" Pack="true" PackagePath="/tools/net8.0" />
+    <None Include="$(OutputPath)net6.0/*" Pack="true" PackagePath="/tools/net6.0/" />
+    <None Include="$(OutputPath)net8.0/*" Pack="true" PackagePath="/tools/net8.0/" />
   </ItemGroup>
 
 </Project>
